--- a/WebProject-nuribom/index.html
+++ b/WebProject-nuribom/index.html
@@ -63,25 +63,27 @@
                                 <div class="pop-footer">
                                     <div class="footerBtn">
                                         <div class="window">
-                                            <button><</button>
-                                            <li>hi</li>
-                                            <li>hello</li>
-                                            <li>hello</li>
-                                            <li>hello</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hello</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hello</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hello</li>
-                                            <li>hi</li>
-                                            <button>></button>
+                                            <button class="slide-left"><</button>
+                                            <ul class="slide-container">
+                                                <li>hi</li>
+                                                <li>hello</li>
+                                                <li>hello</li>
+                                                <li>hello</li>
+                                                <li>hi</li>
+                                                <li>hi</li>
+                                                <li>hi</li>
+                                                <li>hi</li>
+                                                <li>hi</li>
+                                                <li>hello</li>
+                                                <li>hi</li>
+                                                <li>hi</li>
+                                                <li>hello</li>
+                                                <li>hi</li>
+                                                <li>hi</li>
+                                                <li>hello</li>
+                                                <li>hi</li>
+                                            </ul>
+                                            <button class="slide-right">></button>
                                         </div>
                                     </div>
                                 </div>
