--- a/WebProject-nuribom/index.html
+++ b/WebProject-nuribom/index.html
@@ -831,10 +831,11 @@
                             </div>
                         </div>
                         <div class="slide-page">
-                            <button><</button>
-                            <h3>1</h3>
-                            <button>></button>
+                            <button class="prev">&lt;</button>
+                            <h3 class="current-slide">1</h3>
+                            <button class="next">&gt;</button>
                         </div>
+                        
                     </div>
                 </div>
             </div>
