Feat: update-color

--- a/nuribom/sub01.html
+++ b/nuribom/sub01.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         .correct {
-            border: 2px solid green;
+            border: 2px solid #80ED99;
         }
         .incorrect {
             border: 2px solid red;
