--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -21,23 +21,7 @@
                 </svg>
             </div>
             <div class="headerBtn">
-                <input type="checkbox" id="modal2">
-                <button><label for="modal2" id="modal2">LOGIN</label></button>
-                <div class="logb">
-                    <div class="lbox">
-                        <label for="modal2" class="close1">돌아가기</label>
-                        <div class="logotext">
-                            <p>로그인</p>
-                        </div>
-                        <div class="log-input">
-                            <input type="text" placeholder="아이디">
-                            <input type="password" placeholder="비밀번호">
-                        </div>
-                        <div class="push">
-                            <h3>로그인</h3>
-                        </div>
-                    </div>
-                </div>
+                <a href="log.html">LOGIN</a>
                 <button>REGISTER</button>
                 <button style="color: blue; font-weight: 900; cursor: pointer;">BLUE</button>
             </div>
@@ -145,7 +129,7 @@
         <div class="idiom">
             <div class="idiom-main">
                 <button><p><</p></button>
-                <li>사자성어</li>
+                <li>구사일생</li>
                 <button><p>></p></button>
             </div>
             <div class="icon">
