--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -22,7 +22,6 @@
             </div>
             <div class="headerBtn">
                 <a href="log.html">LOGIN</a>
-                <button>REGISTER</button>
                 <button style="color: blue; font-weight: 900; cursor: pointer;">BLUE</button>
             </div>
         </div>
@@ -81,7 +80,7 @@
                         <div class="ex-box">
                             <label for="modal5" id="close">닫기</label>
                             <div class="ex-text">
-                                <p>호랑이에게 물려가도 정신만 차리면 산다</p>
+                                <p>영화 속 주인공은 여러 차례 구사일생의 순간을 겪으면서 성장하게 되었다.</p>
                             </div>
                         </div>
                     </div>
