--- a/nuribom/log.html
+++ b/nuribom/log.html
@@ -18,6 +18,9 @@
         <div class="push">
             <button id="loginButton">로그인</button>
         </div>
+        <div class="register">
+            <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.google.com%3Fhl%3Dko&ec=GAlA8wE&hl=ko&flowName=GlifWebSignIn&flowEntry=AddSession&dsh=S1963724023%3A1718009153737380&ddm=0">회원가입</a>
+        </div>
     </div>
 
     <script src="log.js"></script>
