--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -30,14 +30,14 @@
         <div class="items">
             <div class="itemBox1">
                 <div class="box1">
-                    <label for="modal1" class="open">성장 그래프</label>
+                    <label for="modal1" class="open">진행 현황도</label>
                 </div>
                 <input type="checkbox" id="modal1">
                 <div class="modalb">
                     <div class="box">
                         <label for="modal1" id="close">닫기</label>
                         <div class="stats">
-                            <h2>통계</h2>
+                            <h2>진행도</h2>
                         </div>
                     </div>
                 </div>
