--- a/Double-Slide/index.html
+++ b/Double-Slide/index.html
@@ -12,7 +12,7 @@
             <div style="background-color: antiquewhite;"></div>
             <div style="background-color: lightblue;"></div>
             <div style="background-color: antiquewhite;"></div>
-            <div style="background-color: darkblue;"></div>
+            <div style="background-color: blue;"></div>
         </div>
     </div>
 </body>
