--- a/kakao/index.html
+++ b/kakao/index.html
@@ -28,7 +28,14 @@
     </header>
     <div class="contetns">
         <div class="box">
-            <img src="images/tiger.jpg" alt="">
+            <div class="window">
+                <div class="slides">
+                    <img src="images/tiger.jpg" alt="">
+                    <img src="images/zzzz.jpg" alt="">
+                    <img src="images/zz.html" alt="">
+                    <img src="images/tiger.jpg" alt="">
+                </div>
+            </div>
         </div>
     </div>
     <div class="container">
