--- a/kakao/index.html
+++ b/kakao/index.html
@@ -32,7 +32,9 @@
                 <div class="slides">
                     <img src="images/tiger.jpg" alt="">
                     <img src="images/zzzz.jpg" alt="">
-                    <img src="images/zz.html" alt="">
+                    <img src="images/klkkkj.jpeg" alt="">
+                    <img src="images/kkkdkdkd.png" alt="">
+                    <img src="images/dkjal.png" alt="">
                     <img src="images/tiger.jpg" alt="">
                 </div>
             </div>
