--- a/kakao/index.html
+++ b/kakao/index.html
@@ -51,7 +51,7 @@
                     <img src="images/kakao.jpg" alt="">
                 </div>
                 <div class="item3">
-        
+                    <img src="images/kkkdkdkd.png" alt="">
                 </div>
             </div>
             <div class="left">
