--- a/nuribom/log.html
+++ b/nuribom/log.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="log.css">
-    <title>로그인 페이지</title>
+    <title>로그인</title>
 </head>
 <body>
     <div class="warp">
