--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -117,6 +117,7 @@
                             <div class="review-text">
                                 <p>2024/06/03/ 고진감래(苦盡甘來) 괴로움이 다하면 달콤함이 온다는 뜻으로 고생 끝에 낙이 온다는 말</p>
                                 <p>2024/06/03/ 구사일생(九死一生) 아홉 번 죽을 뻔하다 한 번 살아난다는 뜻으로 죽을 고비를 여러 번 넘기고 간신히 목숨을 건진다는 말</p>
+                                <p>2024/6/22/ 다다익선(多多益善) 많으면 많을수록 더욱 좋다는 말</p>
                             </div>
                         </div>
                     </div>
