--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -151,10 +151,10 @@
                 <p>5. 근묵자흑(近墨者黑) 먹을 가까이하면 검어진다는 뜻으로 좋지 못한 사람과 가까이 지내면 나쁜 것에 물들게 된다는 말</p>
                 <p>6. 다다익선(多多益善) 많으면 많을수록 더욱 좋다는 말</p>
                 <p>7. 각자도생（各自圖生） 제각기 살아 나갈 방법을 꾀함</p>
-                <p>8.(금의야행)錦衣夜行 비단옷을 입고 밤에 감. 아무 보람이 없는 행동.</p>
-                <p>9.(능소능대)能小能大 작은 일에도 능하고 큰 일에도 능하다는 데서, 모든 일에 두루 능함을 말함.</p>
-                <p>10.(비육지탄)髀肉之歎 재능을 발휘랄 때를 얻지 못하여 헛되이 세월만 보내는 것을 한탄함을 이르는 말</p>
-                <p>11.(서리지탄)黍離之歎 나라가 멸망하여 옛 궁궐터에는 기장만이 무성한 것을 탄식한다는 뜻으로, 세상의 영고성쇠가 무상함을 탄식하며 이르는 말</p>
+                <p>8.금의야행(錦衣夜行) 비단옷을 입고 밤에 감. 아무 보람이 없는 행동.</p>
+                <p>9.능소능대(能小能大) 작은 일에도 능하고 큰 일에도 능하다는 데서, 모든 일에 두루 능함을 말함.</p>
+                <p>10.비육지탄(髀肉之歎) 재능을 발휘랄 때를 얻지 못하여 헛되이 세월만 보내는 것을 한탄함을 이르는 말</p>
+                <p>11.서리지탄(黍離之歎) 나라가 멸망하여 옛 궁궐터에는 기장만이 무성한 것을 탄식한다는 뜻으로, 세상의 영고성쇠가 무상함을 탄식하며 이르는 말</p>
             </div>
         </div>
     </div>
