--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>누리봄 프로젝트</title>
-    <!-- <style></style> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -128,9 +127,9 @@
     <div class="con1">
         <div class="idiom">
             <div class="idiom-main">
-                <button><p><</p></button>
-                <li>구사일생</li>
-                <button><p>></p></button>
+                <button>&lt;</button>
+                <li id="idiom-text">구사일생</li>
+                <button>&gt;</button>
             </div>
             <div class="icon">
                 <svg id="audio-icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-caret-right-square" viewBox="0 0 16 16">
@@ -144,21 +143,29 @@
     <div class="con2">
         <div class="idiom-sub">
             <div class="idiom-text">
-                <p  >1. 고진감래(苦盡甘來) 괴로움이 다하면 달콤함이 온다는 뜻으로 고생 끝에 낙이 온다는 말</p>
+                <p>1. 고진감래(苦盡甘來) 괴로움이 다하면 달콤함이 온다는 뜻으로 고생 끝에 낙이 온다는 말</p>
                 <p>2. 구사일생(九死一生) 아홉 번 죽을 뻔하다 한 번 살아난다는 뜻으로 죽을 고비를 여러 번 넘기고 간신히 목숨을 건진다는 말</p>
                 <p>3. 과유불급(過猶不及) 정도가 지나친 것은 부족한 것보다 못하다는 말</p>
                 <p>4. 괄목상대(刮目相對) 눈을 비비고 다시 본다는 뜻으로 상대방의 학문이나 재주가 깜짝 놀랄 만큼 발전했음을 이르는 말</p>
                 <p>5. 근묵자흑(近墨者黑) 먹을 가까이하면 검어진다는 뜻으로 좋지 못한 사람과 가까이 지내면 나쁜 것에 물들게 된다는 말</p>
                 <p>6. 다다익선(多多益善) 많으면 많을수록 더욱 좋다는 말</p>
                 <p>7. 각자도생（各自圖生） 제각기 살아 나갈 방법을 꾀함</p>
-                <p>8.금의야행(錦衣夜行) 비단옷을 입고 밤에 감. 아무 보람이 없는 행동.</p>
-                <p>9.능소능대(能小能大) 작은 일에도 능하고 큰 일에도 능하다는 데서, 모든 일에 두루 능함을 말함.</p>
-                <p>10.비육지탄(髀肉之歎) 재능을 발휘랄 때를 얻지 못하여 헛되이 세월만 보내는 것을 한탄함을 이르는 말</p>
-                <p>11.서리지탄(黍離之歎) 나라가 멸망하여 옛 궁궐터에는 기장만이 무성한 것을 탄식한다는 뜻으로, 세상의 영고성쇠가 무상함을 탄식하며 이르는 말</p>
+                <p>8. 금의야행(錦衣夜行) 비단옷을 입고 밤에 감. 아무 보람이 없는 행동.</p>
+                <p>9. 능소능대(能小能大) 작은 일에도 능하고 큰 일에도 능하다는 데서, 모든 일에 두루 능함을 말함.</p>
+                <p>10. 비육지탄(髀肉之歎) 재능을 발휘랄 때를 얻지 못하여 헛되이 세월만 보내는 것을 한탄함을 이르는 말</p>
+                <p>11. 서리지탄(黍離之歎) 나라가 멸망하여 옛 궁궐터에는 기장만이 무성한 것을 탄식한다는 뜻으로, 세상의 영고성쇠가 무상함을 탄식하며 이르는 말</p>
             </div>
         </div>
     </div>
-
+    <div class="logb">
+        <div class="logbox">
+            <h2>로그인</h2>
+            <input type="text" placeholder="아이디">
+            <input type="password" placeholder="비밀번호">
+            <button class="push">로그인</button>
+            <button class="close1">닫기</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
