Feat: nuribom-projcet

--- a/nuribom/sub04.html
+++ b/nuribom/sub04.html
@@ -231,6 +231,166 @@
                     { text: '二者擇一', correct: false },
                     { text: '二重人格', correct: false }
                 ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
+            },
+            {
+                text: '이심전심',
+                desc: '말하지 않아도 마음에서 마음으로 전함',
+                options: [
+                    { text: '以心傳心', correct: true },
+                    { text: '二律背反', correct: false },
+                    { text: '二者擇一', correct: false },
+                    { text: '二重人格', correct: false }
+                ]
             }
             // 계속해서 나머지 문제를 추가하세요.
         ];
