--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -34,7 +34,7 @@
                 <input type="checkbox" id="modal1">
                 <div class="modalb">
                     <div class="box">
-                        <label for="modal1" id="close">닫기</label>
+                        <label for="modal1" id="close">확인</label>
                         <div class="stats">
                             <h2>진행도</h2>
                         </div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="modalb2">
                     <div class="hint-box">
-                        <label for="modal4" id="close">닫기</label>
+                        <label for="modal4" id="close">확인</label>
                         <div class="hint-text">
                             <p>아홉 번 죽을 뻔하다 한 번 살아난다는 뜻으로 죽을 고비를 여러 번 넘기고 간신히 목숨을 건진다는 말</p>
                         </div>
@@ -77,7 +77,7 @@
                     <label for="modal5">예시</label>
                     <div class="modalb5">
                         <div class="ex-box">
-                            <label for="modal5" id="close">닫기</label>
+                            <label for="modal5" id="close">확인</label>
                             <div class="ex-text">
                                 <p>영화 속 주인공은 여러 차례 구사일생의 순간을 겪으면서 성장하게 되었다.</p>
                             </div>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="modalb1">
                     <div class="box">
-                        <label for="modal3" class="close2">닫기</label>
+                        <label for="modal3" class="close2">확인</label>
                         <div class="header-test">
                             <h2>오늘의 도전</h2>
                         </div>
@@ -109,7 +109,7 @@
                     <label for="modal6">복습하기</label>
                     <div class="modalb6">
                         <div class="review-box">
-                            <label for="modal6" id="close">닫기</label>
+                            <label for="modal6" id="close">확인</label>
                             <div class="review-header">
                                 <h2>기록</h2>
                             </div>
