--- a/nuribom/log.html
+++ b/nuribom/log.html
@@ -21,6 +21,10 @@
         <div class="register">
             <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.google.com%3Fhl%3Dko&ec=GAlA8wE&hl=ko&flowName=GlifWebSignIn&flowEntry=AddSession&dsh=S1963724023%3A1718009153737380&ddm=0">회원가입</a>
         </div>
+        <div class="items">
+            <a href="#">비밀번호 찾기</a>
+            <a href="#">아아디 찾기</a>
+        </div>
     </div>
 
     <script src="log.js"></script>
