--- a/nuribom/sub02.html
+++ b/nuribom/sub02.html
@@ -12,6 +12,39 @@
         .incorrect {
             border: 2px solid red;
         }
+        /* 모달 스타일 */
+        .modal {
+            display: none; 
+            position: fixed; 
+            z-index: 1; 
+            left: 0;
+            top: 0;
+            width: 100%; 
+            height: 100%; 
+            overflow: auto; 
+            background-color: rgb(0,0,0); 
+            background-color: rgba(0,0,0,0.4); 
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto; 
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%; 
+            max-width: 400px; 
+            text-align: center;
+        }
+        .modal button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            border: none;
+            background-color: #80ED99;
+            color: white;
+            cursor: pointer;
+        }
+        .modal button:hover {
+            background-color: #68d484;
+        }
     </style>
 </head>
 <body>
@@ -31,8 +64,16 @@
                 <!-- 문제들이 동적으로 추가될 것입니다. -->
             </div>
             <div class="unkown">
-                <p>잘 모르겠어요</p>
+                <p id="skip-button">잘 모르겠어요</p>
             </div>
+        </div>
+    </div>
+
+    <!-- 모달창 -->
+    <div id="congrats-modal" class="modal">
+        <div class="modal-content">
+            <h2>참 잘했어요!</h2>
+            <button id="close-modal-button">닫기</button>
         </div>
     </div>
 
@@ -187,10 +228,24 @@
                 loadQuestion(currentQuestionIndex);
                 document.getElementById('progress').innerText = `${currentQuestionIndex + 1} / ${questions.length}개`;
             } else {
-                alert('모든 문제를 완료했습니다!');
-                window.location.href = 'index.html'; // 모든 문제를 완료하면 index.html로 이동
+                showModal();
             }
         }
+
+        function showModal() {
+            const modal = document.getElementById('congrats-modal');
+            modal.style.display = 'block';
+        }
+
+        document.getElementById('skip-button').addEventListener('click', function() {
+            nextQuestion();
+        });
+
+        document.getElementById('close-modal-button').addEventListener('click', function() {
+            const modal = document.getElementById('congrats-modal');
+            modal.style.display = 'none';
+            window.location.href = 'index.html';
+        });
 
         // 첫 번째 문제 로드
         loadQuestion(currentQuestionIndex);
