--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -38,6 +38,9 @@
                         <div class="stats">
                             <h2>진행도</h2>
                         </div>
+                        <div class="now-main">
+                            <h1>80%</h1>
+                        </div>
                     </div>
                 </div>
 
